--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,11 @@
     {% if site.facebook.username %}
       <li><a href="https://facebook.com/{{ site.facebook.username }}"><i class="fa fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
     {% endif %}
-    {% if site.author.github %}
+    {% if site.github.username %}
       <li><a href="http://github.com/{{ site.github.username }}"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a></li>
+    {% endif %}
+    {% if site.google_plus.username %}
+      <li><a href="http://github.com/{{ site.google_plus.username }}"><i class="fa fa-fw fa-google-plus" aria-hidden="true"></i> Google+</a></li>
     {% endif %}
     {% if site.author.bitbucket %}
       <li><a href="http://bitbucket.org/{{ site.author.bitbucket }}"><i class="fa fa-fw fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li>
