--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
       <li><a href="http://github.com/{{ site.github.username }}"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a></li>
     {% endif %}
     {% if site.google_plus.username %}
-      <li><a href="https://plus.google.com/communities/{{ site.google_plus.username }}"><i class="fa fa-fw fa-google-plus" aria-hidden="true"></i> Google+</a></li>
+      <li><a href="https://plus.google.com/communities/{{ site.google_plus.username }}"><i class="fa fa-fw fa-google-plus" aria-hidden="true"></i> Google</a></li>
     {% endif %}
     {% if site.author.bitbucket %}
       <li><a href="http://bitbucket.org/{{ site.author.bitbucket }}"><i class="fa fa-fw fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li>
