--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -21,7 +21,7 @@
                 </span>
                 <header class="major">
                         <h3><a href="{{ page.url | relative_url  }}" class="link">{{ page.title }}</a></h3>
-                        <p>{{ page.description }}</p>
+                        <p>{{ page.tagline }}</p>
                 </header>
         </article>
 	{% endif %}
