--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -38,10 +38,10 @@
 		border:				rgba(212,212,255,0.1),
 		border-bg:			rgba(212,212,255,0.035),
 		highlight:			#9bf1ff,
-		accent1:			#6fc3df,
-		accent2:			#8d82c4,
-		accent3:			#ec8d81,
-		accent4:			#e7b788,
-		accent5:			#8ea9e8,
-		accent6:			#87c5a4
+		accent1:			#be00dd,
+		accent2:			#ffd500,
+		accent3:			#3768d8,
+		accent4:			#be00dd,
+		accent5:			#ffd500,
+		accent6:			#3768d8
 	);
