add logo & edit landing page first section color

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,10 @@
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
-                <h1>{{ page.landing-title }}</h1>
+                <h1>
+                  {{ page.landing-title }}
+                  <img src="assets/images/logo.png" style="margin-left: 1vw;" width="15%" alt="logo">
+                </h1>
             </header>
             <div class="content">
                 <p style="text-transform: uppercase;">{{ page.description }}</p>
