--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 		{% for nav-page in site.nav-pages %}
     {% for page in site.pages %}
 		    {% if nav-page == page.title %}
-		        <li><a href="{{ page.url | absolute_url }}/">{{ page.title }}</a></li>
+		        <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
 	    	{% endif %}
 		{% endfor %}
 		{% endfor %}
