--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -37,7 +37,7 @@
 		fg-light:			rgba(244,244,255,0.2),
 		border:				rgba(212,212,255,0.1),
 		border-bg:			rgba(212,212,255,0.035),
-		highlight:			#9bf1ff,
+		highlight:			#ffd500,
 		accent1:			#be00dd,
 		accent2:			#ffd500,
 		accent3:			#3768d8,
