--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@
             <header class="major">
                 <h1>
                   {{ page.landing-title }}
-                  <img src="assets/images/logo.png" style="margin-left: 1vw; vertical-align: middle;" width="15%" alt="logo">
+                  <img src="{{ page.image | absolute_url }}" style="margin-left: 1vw; vertical-align: middle;" width="15%" alt="logo">
                 </h1>
             </header>
             <div class="content">
