--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -8,7 +8,7 @@
 
 	body, input, select, textarea {
 		color: _palette(fg);
-		font-family: _font(family);
+		font-family: _font(family-robot);
 		font-size: 17pt;
 		font-weight: _font(weight);
 		letter-spacing: _font(letter-spacing);
@@ -57,6 +57,7 @@
 
 	p {
 		margin: 0 0 _size(element-margin) 0;
+		font-family: _font(family);
 	}
 
 	h1, h2, h3, h4, h5, h6 {
