--- a/_sass/components/_form.scss
+++ b/_sass/components/_form.scss
@@ -65,6 +65,7 @@
 		display: block;
 		font-size: 0.8em;
 		font-weight: _font(weight-bold);
+		font-family: _font(family-robot);
 		letter-spacing: _font(letter-spacing-alt);
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
 		text-transform: uppercase;
