--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -17,6 +17,7 @@
 		box-shadow: 0 0 0.25em 0 rgba(0,0,0,0.15);
 		cursor: default;
 		font-weight: _font(weight-bold);
+		font-family: _font(family-robot);
 		height: 3.25em;
 		left: 0;
 		letter-spacing: _font(letter-spacing-alt);
