--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -62,7 +62,7 @@
 	h1, h2, h3, h4, h5, h6 {
 		color: _palette(fg-bold);
 		font-weight: _font(weight-bold);
-		font-family: _font(family-robot);
+		font-family: _font(family-robot) !important;
 		line-height: 1.65;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
 
