--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -8,7 +8,7 @@
 
 	#footer {
 		.copyright {
-			font-family: _font(family-robot);
+			font-family: _font(family-robot) !important;
 			font-size: 0.8em;
 			list-style: none;
 			padding-left: 0;
