--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -62,13 +62,14 @@
 	h1, h2, h3, h4, h5, h6 {
 		color: _palette(fg-bold);
 		font-weight: _font(weight-bold);
-		font-family: _font(family-robot) !important;
+		font-family: _font(family-robot);
 		line-height: 1.65;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
 
 		a {
 			color: inherit;
 			border-bottom: 0;
+			font-family: _font(family-robot);
 		}
 	}
 
