--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -8,13 +8,13 @@
 
 	#footer {
 		.copyright {
-			font-family: _font(family-robot) !important;
 			font-size: 0.8em;
 			list-style: none;
 			padding-left: 0;
 
 			li {
 				border-left: solid 1px _palette(border);
+				font-family: _font(family-robot);
 				color: _palette(fg-light);
 				display: inline-block;
 				line-height: 1;
@@ -25,6 +25,10 @@
 					border-left: 0;
 					margin-left: 0;
 					padding-left: 0;
+				}
+
+				a {
+					font-family: _font(family-robot);
 				}
 			}
 		}
