--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -83,6 +83,7 @@
 				padding: 0 0.75em;
 				position: relative;
 				vertical-align: middle;
+				font-family: _font(family-robot);
 
 				&:last-child {
 					padding-right: 1.5em;
