edit site style, remove banner image

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -14,9 +14,9 @@
 
         <section id="banner" class="style2">
             <div class="inner">
-                <span class="image">
-                    <img src="{{ site.baseurl }}/{{ page.image }}" alt="">
-                </span>
+                <!--<span class="image">
+                    <img src="{{ page.image | absolute_url }}" alt="">
+                </span>-->
                 <header class="major">
 
                     <h1>{{ page.title }}</h1>
