--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 
 <!-- Header -->
 <header id="header"{% if page.layout == "landing" %} class="alt style2"{% endif %}{% if page.layout == "home" %} class="alt"{% endif %}>
-	<a href="{{ "" | absolute_url }}/" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>
+	<a href="{{ "" | absolute_url }}" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
@@ -12,6 +12,7 @@
 <!-- Menu -->
 <nav id="menu">
 	<ul class="links">
+		<li><a href="/">Home</a></li>
 		{% for nav-page in site.nav-pages %}
     {% for page in site.pages %}
 		    {% if nav-page == page.title %}
