--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@
                 </h1>
             </header>
             <div class="content">
-                <p style="text-transform: uppercase;">{{ page.description }}</p>
+                <p>{{ page.description }}</p>
                 <ul class="actions">
                     <li><a href="#one" class="button next scrolly">Get Started</a></li>
                 </ul>
