--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -26,6 +26,7 @@
 		display: inline-block;
 		font-size: 0.8em;
 		font-weight: _font(weight-bold);
+		font-family: _font(family-robot);
 		height: 3.5em;
 		letter-spacing: _font(letter-spacing-alt);
 		line-height: 3.5em;
