--- a/_sass/layout/_banner.scss
+++ b/_sass/layout/_banner.scss
@@ -8,7 +8,7 @@
 
 	#banner {
 		@include vendor('align-items', 'center');
-		@include vendor('background-image', 'url("../images/banner.jpg")');
+		//@include vendor('background-image', 'url("../images/banner.jpg")');
 		@include vendor('display', 'flex');
 		@include padding(4em, 0, (2em, 0, 0, 0));
 		background-attachment: fixed;
@@ -87,11 +87,7 @@
 				}
 
 				p {
-					font-size: 0.7em;
 					font-family: _font(family);
-					font-weight: _font(weight-bold);
-					letter-spacing: _font(letter-spacing-alt);
-					text-transform: uppercase;
 				}
 			}
 		}
