--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -51,7 +51,7 @@
 				display: inline-block;
 				line-height: 1.65em;
 				margin-right: 0.325em;
-				padding: 0 0.125em 0 (_font(letter-spacing-alt) + 0.125em);
+				padding: 0.2em 0.125em 0 (_font(letter-spacing-alt) + 0.125em);
 			}
 
 			&:hover {
@@ -80,7 +80,7 @@
 				font-size: 0.8em;
 				height: inherit;
 				line-height: inherit;
-				padding: 0 0.75em;
+				padding: 0.2em 0.75em;
 				position: relative;
 				vertical-align: middle;
 				font-family: _font(family-robot);
