--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,9 @@
 	<link rel="stylesheet" href="{{ "assets/css/main.css" | relative_url }}" />
 	<!--[if lte IE 9]><link rel="stylesheet" href="{{ "assets/css/ie9.css" | relative_url }}" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="{{ "assets/css/ie8.css" | relative_url }}" /><![endif]-->
+
 	<!-- Cookies notification -->
+	<link rel="stylesheet" type="text/css" href="assets/css/cookieconsent.min.css">
 	<script src="assets/js/cookieconsent.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="assets/js/cookies.js" type="text/javascript" charset="utf-8"></script>
 </head>
