--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -9,6 +9,7 @@
 	input[type="submit"],
 	input[type="reset"],
 	input[type="button"],
+	a[role="button"],
 	button,
 	.button {
 		@include vendor('appearance', 'none');
