update image width on mobile

--- a/_sass/components/_image.scss
+++ b/_sass/components/_image.scss
@@ -63,4 +63,12 @@ img {
 				margin: (_size(element-margin) * 0.75) 0;
 			}
 		}
+
+        &.instructions {
+            width: 49%;
+
+            @include breakpoint(small) {
+				width: 100%;
+			}
+        }
 	}
