add hiding subtitle on mobile

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -38,6 +38,10 @@
 
 			span {
 				font-family: _font(family-robot);
+
+				@include breakpoint(small) {
+					display: none;
+				}
 			}
 
 			strong {
