--- a/_sass/libs/_mixins.scss
+++ b/_sass/libs/_mixins.scss
@@ -13,9 +13,8 @@
 
 		-moz-osx-font-smoothing: grayscale;
 		-webkit-font-smoothing: antialiased;
-		font-family: "Font Awesome 5 Brands";
+		font-family: "Font Awesome 5";
 		font-style: normal;
-		font-weight: normal;
 		text-transform: none !important;
 
 	}
