--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,8 @@
 	{% include gtag.js %}
 	<title>{{ site.title }}</title>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description" content="Enabling children to learn the basics of programming and robotics in a fun, interactive and collaborative way.">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 	<!--[if lte IE 8]><script src="{{ "assets/js/ie/html5shiv.js" | relative_url }}"></script><![endif]-->
 	<link rel="shortcut icon" type="image/png" href="{{ "assets/img/robokoding_logo.png" | relative_url }}">
 	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
