--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -106,24 +106,10 @@
 	</footer>
 </div>
 
-<!-- Load Facebook SDK for JavaScript -->
-<div id="fb-root"></div>
-<script>
-	window.fbAsyncInit = function() {
-		FB.init({xfbml: true, version: 'v9.0'});
-	};
-
-	(function(d, s, id) {
-		var js, fjs = d.getElementsByTagName(s)[0];
-		if (d.getElementById(id)) return;
-		js = d.createElement(s); js.id = id;
-		js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-		fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));
-</script>
-
-<!-- Your Chat Plugin code -->
-<div class="fb-customerchat" attribution="setup_tool" page_id="1521947677885929"></div>
+<!-- Whatsapp button -->
+<a href="https://api.whatsapp.com/send?phone=4917697888820." class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+</a>
 
 <!-- Scripts -->
 <script src="{{ "assets/js/jquery.min.js" | absolute_url }}"></script>
