--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -107,8 +107,28 @@
 </div>
 
 <!-- Whatsapp button -->
-<a href="https://api.whatsapp.com/send?phone=4917697888820." class="float" target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
+<style>
+.my-main-float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+
+.my-inner-float{
+	margin-top:16px;
+}
+</style
+<a href="https://api.whatsapp.com/send?phone=4917697888820." class="my-main-float" target="_blank">
+        <i class="fa fa-whatsapp my-inner-float"></i>
 </a>
 
 <!-- Scripts -->
