--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -126,7 +126,7 @@
 .my-inner-float{
 	margin-top:16px;
 }
-</style
+</style>
 <a href="https://api.whatsapp.com/send?phone=4917697888820." class="my-main-float" target="_blank">
         <i class="fa fa-whatsapp my-inner-float"></i>
 </a>
