--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -127,7 +127,7 @@
 	margin-top:16px;
 }
 </style>
-<a href="https://api.whatsapp.com/send?phone=4917697888820." class="my-main-float" target="_blank">
+<a href="https://api.whatsapp.com/send?phone=4917697888820&text=Hi,%20" class="my-main-float" target="_blank">
         <i class="fa fa-whatsapp my-inner-float"></i>
 </a>
 
